workloads/kube-burner/workloads/large-networkpolicy-egress/networkpolicy-allowdns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: case-large-networkpolicy-egress-allow-dns
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 10.128.0.0/16
  - from:
    - ipBlock:
        cidr: 172.30.0.0/16
  egress:
  - to:
    - ipBlock:
        cidr: 10.128.0.0/14
    - ipBlock:
        cidr: 172.30.0.0/16
    - ipBlock:
        cidr: 8.8.8.8/32
    - ipBlock:
        cidr: 8.8.8.4/32
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
    ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP          
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
